Accessibility fixes started on December 20, 2024 (#8)
* Bug 55439714: [Winter Starfall-Website] [PC] [Accessibility]: Main landmark is not defined on the page.

* Disable hot module reloading for better local stability

* Bug 55439948: [Winter Starfall-Website] [PC] [Accessibility]: In high contrast Aquatic theme, 'WINTER STARFALL' logo link is not visible present in main page.

* Bug 55440059: [Winter Starfall-Website] [PC] [Accessibility]: 'PlayFab demo game showcasing....', 'Open Source', 'Data included', 'Easy to host' and 'Best Practices' visually appearing as heading are not programmatically defined as heading.

* Cleaned up HTML

* Bug 55440129: [Winter Starfall-Website] [PC] [Accessibility]: Main landmark is not defined on Winter Starfall 'About' page.

* Bug 55440216: [Winter Starfall-Website] [PC] [Accessibility]: 'Attachment — The Standard Contractual Clauses (Processors)' text is incorrectly defined as h1 heading on the page.

* Bug 55440360: [Winter Starfall-Website] [PC] [Accessibility]: Luminosity ratio of 'https://playfab.com', 'https://playfab.com/pricing/'.... etc link texts with respect to its adjacent static text is 1:1, which is less than minimum required ratio 3:1.

* Bug 55441146: [Winter Starfall-Website] [PC] [Accessibility]: Incorrect heading structure is defined on 'Starfall Explore' page.

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -20,3 +20,7 @@ div.markdown p {
 div.privacy p {
 	@apply my-4;
 }
+
+div.privacy a {
+	@apply ml-1 text-link underline;
+}
